--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:    Vedasri Nakka        
 locale:           en_US
-url: https://krishnakanthnakka.github.io
+url: https://vedasrinakka.github.io
 # Jekyll configuration
 
 permalink:   /:categories/:title/
